# AdaptiveMapOptimization

./: .gitignore  CMakeLists.txt  adaptive_map.hh
include/: adaptive_map.hh
src/: OptimizationElements2D.hh  RemesherBase.hh  RemesherNaive.cc  RemesherNaive.hh  RemesherValentin.cc  RemesherValentin.hh  RemeshingAssisted.hh  adaptive_map.cc  adaptive_map.hh  helpers.cc  helpers.hh  includes.cc  includes.hh  remesher.cc  remesher.hh  stress_tests.cc  stress_tests.hh
src/include/: helpers.hh
